--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.6",
     "@radix-ui/react-avatar": "^1.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.1",
     "@supabase/supabase-js": "^2.7.0",
     "@tanstack/react-query": "^4.24.4",
