--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "avvvatars-react": "^0.4.2",
+    "dayjs": "^1.11.7",
+    "draft-js": "^0.11.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "tailwind-merge": "^1.9.0",
     "tailwindcss-bg-patterns": "^0.2.0",
     "typescript": "4.9.5",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
