--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-virtuoso": "^4.1.0",
     "tailwind-merge": "^1.9.0",
     "tailwindcss-bg-patterns": "^0.2.0",
     "typescript": "4.9.5",
